// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelApiTypes Should have specific API properties: all exported api types 1`] = `
Object {
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
  "default": Object {
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
  },
  "rhelApiTypes": Object {
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
  },
}
`;

exports[`RhelApiTypes Should have specific API properties: specific types 1`] = `
Object {
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
}
`;
